Update copyright year to 2025 and upgrade cui-java-parent to version 1.1.3