@@ -1,12 +1,11 @@
 /*
- * Licensed to the author under one or more
- * contributor license agreements. See the NOTICE file distributed with
- * this work for additional information regarding copyright ownership.
- * The ASF licenses this file to You under the Apache License, Version 2.0
- * (the "License"); you may not use this file except in compliance with
- * the License. You may obtain a copy of the License at
+ * Copyright © 2025 CUI-OpenSource-Software (info@cuioss.de)
  *
- * http://www.apache.org/licenses/LICENSE-2.0
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -699,7 +698,7 @@ public class Generators {
             @Override
             protected Pair<T, T> transform(Generator<List<T>> inputGenerator) {
                 var next = inputGenerator.next();
-                return new Pair<>(next.get(0), next.get(1));
+                return new Pair<>(next.getFirst(), next.get(1));
             }
         };
     }
@@ -749,7 +748,7 @@ public class Generators {
             @Override
             protected Triple<T, T, T> transform(Generator<List<T>> inputGenerator) {
                 var next = inputGenerator.next();
-                return new Triple<>(next.get(0), next.get(1), next.get(2));
+                return new Triple<>(next.getFirst(), next.get(1), next.get(2));
             }
         };
     }
