@@ -1,12 +1,12 @@
 /*
- * Copyright 2023 the original author or authors.
- * <p>
+ * Copyright © 2025 CUI-OpenSource-Software (info@cuioss.de)
+ *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * <p>
- * https://www.apache.org/licenses/LICENSE-2.0
- * <p>
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -175,7 +175,7 @@ public class CompositeTypeGeneratorArgumentsProvider extends AbstractTypedGenera
      */
     private Stream<Arguments> createOneToOnePairs(List<List<Object>> generatedValues) {
         // Check that all lists have the same size
-        int size = generatedValues.get(0).size();
+        int size = generatedValues.getFirst().size();
         for (List<Object> values : generatedValues) {
             if (values.size() != size) {
                 throw new JUnitException(
