@@ -1,12 +1,11 @@
 /*
- * Licensed to the author under one or more
- * contributor license agreements. See the NOTICE file distributed with
- * this work for additional information regarding copyright ownership.
- * The ASF licenses this file to You under the Apache License, Version 2.0
- * (the "License"); you may not use this file except in compliance with
- * the License. You may obtain a copy of the License at
+ * Copyright © 2025 CUI-OpenSource-Software (info@cuioss.de)
  *
- * http://www.apache.org/licenses/LICENSE-2.0
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -159,7 +158,7 @@ class CombinedGeneratorsTest {
     @Test
     void nullsAndWithVargsParameter() {
         List<Object> expected = new ArrayList<>(asList(new Object(), new Object(), null));
-        Generator<Object> generator = CombinedGenerators.nullsAnd(expected.get(0), expected.get(1));
+        Generator<Object> generator = CombinedGenerators.nullsAnd(expected.getFirst(), expected.get(1));
         for (var i = 0; i < 1 << 10 && expected.size() > 0; i++) {
             expected.remove(generator.next());
         }
