@@ -1,12 +1,11 @@
 /*
- * Licensed to the author under one or more
- * contributor license agreements. See the NOTICE file distributed with
- * this work for additional information regarding copyright ownership.
- * The ASF licenses this file to You under the Apache License, Version 2.0
- * (the "License"); you may not use this file except in compliance with
- * the License. You may obtain a copy of the License at
+ * Copyright © 2025 CUI-OpenSource-Software (info@cuioss.de)
  *
- * http://www.apache.org/licenses/LICENSE-2.0
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -86,7 +85,7 @@ class IntegerGeneratorTest extends WholeNumberGeneratorTestCase<Integer> {
     @Test
     void bounds() {
         var loHi = sortedLists(integers(), fixedValues(2)).next();
-        int lo = loHi.get(0);
+        int lo = loHi.getFirst();
         int hi = loHi.get(1);
         var integerGenerator = integers(lo, hi);
         testBounds(integerGenerator, lo, hi);
@@ -103,7 +102,7 @@ class IntegerGeneratorTest extends WholeNumberGeneratorTestCase<Integer> {
     @Test
     void boundsGausian() {
         var loHi = sortedLists(integers(), fixedValues(2)).next();
-        int lo = loHi.get(0);
+        int lo = loHi.getFirst();
         int hi = loHi.get(1);
         var integerGenerator = PrimitiveGenerators.integers(lo, hi, Distribution.POSITIV_NORMAL);
         testBounds(integerGenerator, lo, hi);
