@@ -1,12 +1,11 @@
 /*
- * Licensed to the author under one or more
- * contributor license agreements. See the NOTICE file distributed with
- * this work for additional information regarding copyright ownership.
- * The ASF licenses this file to You under the Apache License, Version 2.0
- * (the "License"); you may not use this file except in compliance with
- * the License. You may obtain a copy of the License at
+ * Copyright © 2025 CUI-OpenSource-Software (info@cuioss.de)
  *
- * http://www.apache.org/licenses/LICENSE-2.0
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -38,7 +37,7 @@ class ListGeneratorTest extends AbstractCollectionTestCase {
     @Test
     void typeVariance() {
         Generator<List<Object>> objs = CombinedGenerators.nonEmptyLists(PrimitiveGenerators.integers());
-        assertInstanceOf(Integer.class, objs.next().iterator().next());
+        assertInstanceOf(Integer.class, objs.next().getFirst());
     }
 
     @Override
@@ -59,7 +58,7 @@ class ListGeneratorTest extends AbstractCollectionTestCase {
     @Test
     void listGeneratorWithHiAndLowValue() {
         var hiLow = SizeGenerator.anyMinMax();
-        int lo = hiLow.get(0);
+        int lo = hiLow.getFirst();
         int hi = hiLow.get(1);
         testListGenerator(lo, hi, lists(integers(), lo, hi));
     }
