@@ -1,12 +1,11 @@
 /*
- * Licensed to the author under one or more
- * contributor license agreements. See the NOTICE file distributed with
- * this work for additional information regarding copyright ownership.
- * The ASF licenses this file to You under the Apache License, Version 2.0
- * (the "License"); you may not use this file except in compliance with
- * the License. You may obtain a copy of the License at
+ * Copyright © 2025 CUI-OpenSource-Software (info@cuioss.de)
  *
- * http://www.apache.org/licenses/LICENSE-2.0
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -36,7 +35,7 @@ class StrictlyOrderedGeneratorTest {
     @Test
     void orderedSized() {
         var lowHigh = SizeGenerator.anyMinMax();
-        int low = lowHigh.get(0);
+        int low = lowHigh.getFirst();
         int high = lowHigh.get(1);
         var actual = CombinedGenerators.strictlyOrdered(integers(), low, high).next();
         assertIsStrictlyOrder(actual);
